[tool.poetry]
name = "save-editor"
version = "0.1.0"
description = ""
authors = ["Nyaaa <1457047+Nyaaa@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "save_editor"}]

[tool.poetry.dependencies]
python = "^3.10"
lzstring = "^1.0.4"
gooey = "^1.0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
